--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,3 @@
-@import "react-alice-carousel/lib/alice-carousel.css";
-
 html {
   scroll-behavior: smooth;
 }
@@ -18,7 +16,7 @@ body {
 }
 
 
-/* 
+
 .bg1 {
   z-index: 8;
   background-image: url(/1.JPG);
@@ -54,16 +52,16 @@ body {
   height: 100vh;
   top: 0;
   width: 100%;
-} */
+}
 
 .main-pic {
   position: absolute;
   width: 100%;
   height: 100vh;
- 
+
   top: 0;
   z-index: 5;
-  background-image: url(../../public/1.jpg);
+  /* background-image: url(../../public/1.jpg); */
 }
 
 header {
@@ -352,12 +350,12 @@ span {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   width: 100%;
-  height: 50vh; 
+  height: 50vh;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   justify-content: center;
   background-color: #f9f4ef;
-  padding-top: 150px; 
-  margin-top: -10px; 
+  padding-top: 150px;
+  margin-top: -25px;
   top: 0;
 }
 
